--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Hi There!</title>
+{% extends 'base.html' %}
+{% block title %}Hi There!{% endblock %}
 </head>
 <body>
+    {% block content %}
     <h1>Hi There!</h1>
     <form action="/greet">
         <label>What's your name? <input type="text" name="person"></label>
         <input type="submit">
     </form>
+    {% endblock %}
 </body>
 </html>
